// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateProjectDialog renders request form only if requestOnly is set 1`] = `
<div
  aria-labelledby="mui-2"
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm MuiDialog-paperFullWidth css-1b0zdj3-MuiPaper-root-MuiDialog-paper"
  role="dialog"
>
  <h2
    class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-xq3hxg-MuiTypography-root-MuiDialogTitle-root"
    id="mui-2"
  >
    Request New Project
  </h2>
  <div
    class="MuiDialogContent-root css-ypiqx9-MuiDialogContent-root"
  >
    <div>
      CreateProjectForm mock 
      {"requestOnly":true}
    </div>
  </div>
</div>
`;

exports[`CreateProjectDialog renders to match snapshot passing function props to form 1`] = `
<div
  aria-labelledby="mui-1"
  class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation24 MuiDialog-paper MuiDialog-paperScrollPaper MuiDialog-paperWidthSm MuiDialog-paperFullWidth css-1b0zdj3-MuiPaper-root-MuiDialog-paper"
  role="dialog"
>
  <h2
    class="MuiTypography-root MuiTypography-h6 MuiDialogTitle-root css-xq3hxg-MuiTypography-root-MuiDialogTitle-root"
    id="mui-1"
  >
    Create New Project
  </h2>
  <div
    class="MuiDialogContent-root css-ypiqx9-MuiDialogContent-root"
  >
    <div>
      CreateProjectForm mock 
      {}
    </div>
  </div>
</div>
`;
